# Zephyr-Connected-Edge-Node-nRF52840

./: CMakeLists.txt  Kconfig  README.md  prj.conf
boards/: nrf52840dk_nrf52840.overlay
docker/: Dockerfile
docs/: rtos-architecture.md
include/: app_config.h  app_types.h  control_plane.h  irq_button.h  net_client.h  pipeline_math.h  processor.h  rest_gateway.h  rtos_channels.h  sampler.h  sensor_bus.h  ws_client.h
scripts/: build.sh  ci-local.sh  debug.sh  flash.sh  mock_gateway.py  test.sh
src/: main.c
src/app/: app_config.c
src/connectivity/: net_client.c  rest_gateway.c  ws_client.c
src/control/: control_plane.c
src/drivers/: irq_button.c  sensor_bus.c
src/pipeline/: pipeline_math.c  processor.c  sampler.c
tests/unit/: CMakeLists.txt  testcase.yaml
tests/unit/src/: test_pipeline_math.c
